--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -2,7 +2,7 @@
   .user-name
     = message.user.name
   .post-time
-    = message.created_at
+    = message.created_at.strftime("%Y/%m/%d %H:%M")
   .messagebox__text
     = message.content
 = image_tag message.image.url class: 'messagebox__image' if message.image.present?
