--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -60,8 +60,7 @@
         color: $lightgray;
         padding-left: 10px;
       }
-      &__list{
-        padding-left: 40px;
+      &__text{
         font-size: 14px;
         margin-bottom: 10px;
         clear: both;
