--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -5,7 +5,7 @@
       %ul
         - group.errors.full_messages.each do |message|
           %li= message
-  .chat-group-form__field
+  .chat-group-form__field.clearfix
     .chat-group-form__field--left
       = f.label :name, class: 'chat-group-form__label'
     .chat-group-form__field--right
@@ -20,11 +20,13 @@
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
       = f.label :name, 'チャットメンバー', class:'chat-group-form__label'
-    #chat-group-users
-      #chat-group-user-.chat-group-user.clearfix
-        %input{ name: "group[user_ids][]", type: "hidden", value: "#{current_user.id}"}
-        %p.chat-group-user__name
-          = current_user.name
+    .chat-group-form__field--right
+      #chat-group-users
+        #chat-group-user.chat-group-user.clearfix
+          %input{ name: "group[user_ids][]", type: "hidden", value: "#{current_user.id}"}
+          %p.chat-group-user__name
+            = current_user.name
+          %a.user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn 削除
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
     .chat-group-form__field--right
